// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavigation.Link renders 1`] = `
.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c6 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c8 {
  color: #2a2c2e;
  color: inherit;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
}

.c8 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c3 {
  margin-left: 0;
  border-left: none;
}

.c3:hover {
  background-color: #f2eff4;
}

.c1 {
  background-color: none;
}

.c5 {
  border-left: none;
  margin-left: 0px;
}

.c7 {
  color: #54595f;
}

.c7:hover {
  color: #4b286d;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  active={false}
  href="#"
  reactRouterLinkComponent={null}
  subMenuLink={false}
  to={null}
>
  <Link__StyledAnchor
    href="#"
    to={null}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Link__StyledAnchor-gur8v7-4",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "text-decoration: none;",
            ],
          },
          "displayName": "Link__StyledAnchor",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Link__StyledAnchor-gur8v7-4",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      to={null}
    >
      <a
        className="c0"
        href="#"
        to={null}
      >
        <Link__BoxWrapper
          active={0}
        >
          <StyledComponent
            active={0}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Link__BoxWrapper-gur8v7-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    [Function],
                  ],
                },
                "displayName": "Link__BoxWrapper",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "below": [Function],
                  "between": [Function],
                  "children": [Function],
                  "className": [Function],
                  "horizontal": [Function],
                  "inline": [Function],
                  "inset": [Function],
                  "tag": [Function],
                  "vertical": [Function],
                },
                "render": [Function],
                "styledComponentId": "Link__BoxWrapper-gur8v7-1",
                "target": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "below": undefined,
                    "between": undefined,
                    "className": undefined,
                    "horizontal": undefined,
                    "inline": false,
                    "inset": undefined,
                    "tag": "div",
                    "vertical": undefined,
                  },
                  "displayName": "Box",
                  "propTypes": Object {
                    "below": [Function],
                    "between": [Function],
                    "children": [Function],
                    "className": [Function],
                    "horizontal": [Function],
                    "inline": [Function],
                    "inset": [Function],
                    "tag": [Function],
                    "vertical": [Function],
                  },
                  "render": [Function],
                },
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <Box
              active={0}
              className="c1"
              inline={false}
              tag="div"
            >
              <styled.div
                active={0}
                className="c1"
                inline={false}
                tag="div"
              >
                <StyledComponent
                  active={0}
                  className="c1"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [
                        [Function],
                      ],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bdVaJa",
                        "isStatic": false,
                        "lastClassName": "c6",
                        "rules": Array [
                          [Function],
                          [Function],
                          [Function],
                          [Function],
                          [Function],
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bdVaJa",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  inline={false}
                  tag="div"
                >
                  <div
                    className="c2 c1 Link__BoxWrapper-gur8v7-1 c1"
                  >
                    <Link__BoxContainer
                      active={0}
                      submenulink={0}
                      vertical={3}
                    >
                      <StyledComponent
                        active={0}
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Link__BoxContainer-gur8v7-0",
                              "isStatic": false,
                              "lastClassName": "c3",
                              "rules": Array [
                                [Function],
                              ],
                            },
                            "displayName": "Link__BoxContainer",
                            "foldedComponentIds": Array [],
                            "propTypes": Object {
                              "below": [Function],
                              "between": [Function],
                              "children": [Function],
                              "className": [Function],
                              "horizontal": [Function],
                              "inline": [Function],
                              "inset": [Function],
                              "tag": [Function],
                              "vertical": [Function],
                            },
                            "render": [Function],
                            "styledComponentId": "Link__BoxContainer-gur8v7-0",
                            "target": Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "defaultProps": Object {
                                "below": undefined,
                                "between": undefined,
                                "className": undefined,
                                "horizontal": undefined,
                                "inline": false,
                                "inset": undefined,
                                "tag": "div",
                                "vertical": undefined,
                              },
                              "displayName": "Box",
                              "propTypes": Object {
                                "below": [Function],
                                "between": [Function],
                                "children": [Function],
                                "className": [Function],
                                "horizontal": [Function],
                                "inline": [Function],
                                "inset": [Function],
                                "tag": [Function],
                                "vertical": [Function],
                              },
                              "render": [Function],
                            },
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                        submenulink={0}
                        vertical={3}
                      >
                        <Box
                          active={0}
                          className="c3"
                          inline={false}
                          submenulink={0}
                          tag="div"
                          vertical={3}
                        >
                          <styled.div
                            active={0}
                            className="c3"
                            inline={false}
                            submenulink={0}
                            tag="div"
                            vertical={3}
                          >
                            <StyledComponent
                              active={0}
                              className="c3"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [
                                    [Function],
                                  ],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-bdVaJa",
                                    "isStatic": false,
                                    "lastClassName": "c6",
                                    "rules": Array [
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-bdVaJa",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              inline={false}
                              submenulink={0}
                              tag="div"
                              vertical={3}
                            >
                              <div
                                className="c4 c3 Link__BoxContainer-gur8v7-0 c3"
                              >
                                <Link__BoxActive
                                  active={0}
                                  horizontal={3}
                                  submenulink={0}
                                >
                                  <StyledComponent
                                    active={0}
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "Link__BoxActive-gur8v7-2",
                                          "isStatic": false,
                                          "lastClassName": "c5",
                                          "rules": Array [
                                            [Function],
                                          ],
                                        },
                                        "displayName": "Link__BoxActive",
                                        "foldedComponentIds": Array [],
                                        "propTypes": Object {
                                          "below": [Function],
                                          "between": [Function],
                                          "children": [Function],
                                          "className": [Function],
                                          "horizontal": [Function],
                                          "inline": [Function],
                                          "inset": [Function],
                                          "tag": [Function],
                                          "vertical": [Function],
                                        },
                                        "render": [Function],
                                        "styledComponentId": "Link__BoxActive-gur8v7-2",
                                        "target": Object {
                                          "$$typeof": Symbol(react.forward_ref),
                                          "defaultProps": Object {
                                            "below": undefined,
                                            "between": undefined,
                                            "className": undefined,
                                            "horizontal": undefined,
                                            "inline": false,
                                            "inset": undefined,
                                            "tag": "div",
                                            "vertical": undefined,
                                          },
                                          "displayName": "Box",
                                          "propTypes": Object {
                                            "below": [Function],
                                            "between": [Function],
                                            "children": [Function],
                                            "className": [Function],
                                            "horizontal": [Function],
                                            "inline": [Function],
                                            "inset": [Function],
                                            "tag": [Function],
                                            "vertical": [Function],
                                          },
                                          "render": [Function],
                                        },
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                    horizontal={3}
                                    submenulink={0}
                                  >
                                    <Box
                                      active={0}
                                      className="c5"
                                      horizontal={3}
                                      inline={false}
                                      submenulink={0}
                                      tag="div"
                                    >
                                      <styled.div
                                        active={0}
                                        className="c5"
                                        horizontal={3}
                                        inline={false}
                                        submenulink={0}
                                        tag="div"
                                      >
                                        <StyledComponent
                                          active={0}
                                          className="c5"
                                          forwardedComponent={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "attrs": Array [
                                                [Function],
                                              ],
                                              "componentStyle": ComponentStyle {
                                                "componentId": "sc-bdVaJa",
                                                "isStatic": false,
                                                "lastClassName": "c6",
                                                "rules": Array [
                                                  [Function],
                                                  [Function],
                                                  [Function],
                                                  [Function],
                                                  [Function],
                                                ],
                                              },
                                              "displayName": "styled.div",
                                              "foldedComponentIds": Array [],
                                              "render": [Function],
                                              "styledComponentId": "sc-bdVaJa",
                                              "target": "div",
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                            }
                                          }
                                          forwardedRef={null}
                                          horizontal={3}
                                          inline={false}
                                          submenulink={0}
                                          tag="div"
                                        >
                                          <div
                                            className="c6 c5 Link__BoxActive-gur8v7-2 c5"
                                          >
                                            <Link__StyledTextProvider
                                              active={false}
                                            >
                                              <StyledComponent
                                                active={false}
                                                forwardedComponent={
                                                  Object {
                                                    "$$typeof": Symbol(react.forward_ref),
                                                    "attrs": Array [],
                                                    "componentStyle": ComponentStyle {
                                                      "componentId": "Link__StyledTextProvider-gur8v7-3",
                                                      "isStatic": false,
                                                      "lastClassName": "c7",
                                                      "rules": Array [
                                                        [Function],
                                                      ],
                                                    },
                                                    "displayName": "Link__StyledTextProvider",
                                                    "foldedComponentIds": Array [],
                                                    "render": [Function],
                                                    "styledComponentId": "Link__StyledTextProvider-gur8v7-3",
                                                    "target": [Function],
                                                    "toString": [Function],
                                                    "warnTooManyClasses": [Function],
                                                    "withComponent": [Function],
                                                  }
                                                }
                                                forwardedRef={null}
                                              >
                                                <ColoredTextProvider
                                                  active={false}
                                                  className="c7"
                                                >
                                                  <div
                                                    className="c7"
                                                  >
                                                    <Text
                                                      block={false}
                                                      bold={false}
                                                      invert={false}
                                                      size="medium"
                                                    >
                                                      <Text__StyledText
                                                        block={false}
                                                        bold={false}
                                                        inheritColor={true}
                                                        invert={false}
                                                        size="medium"
                                                      >
                                                        <StyledComponent
                                                          block={false}
                                                          bold={false}
                                                          forwardedComponent={
                                                            Object {
                                                              "$$typeof": Symbol(react.forward_ref),
                                                              "attrs": Array [],
                                                              "componentStyle": ComponentStyle {
                                                                "componentId": "Text__StyledText-sc-1m0rr67-0",
                                                                "isStatic": false,
                                                                "lastClassName": "c8",
                                                                "rules": Array [
                                                                  [Function],
                                                                  [Function],
                                                                  [Function],
                                                                  [Function],
                                                                  [Function],
                                                                  "sup {",
                                                                  "top: -0.5em;",
                                                                  "font-size: 0.875rem;",
                                                                  "position: relative;",
                                                                  "vertical-align: baseline;",
                                                                  "padding-left: 0.1em;",
                                                                  "}",
                                                                ],
                                                              },
                                                              "displayName": "Text__StyledText",
                                                              "foldedComponentIds": Array [],
                                                              "render": [Function],
                                                              "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                                                              "target": "span",
                                                              "toString": [Function],
                                                              "warnTooManyClasses": [Function],
                                                              "withComponent": [Function],
                                                            }
                                                          }
                                                          forwardedRef={null}
                                                          inheritColor={true}
                                                          invert={false}
                                                          size="medium"
                                                        >
                                                          <span
                                                            className="c8"
                                                            size="medium"
                                                          >
                                                            Home
                                                          </span>
                                                        </StyledComponent>
                                                      </Text__StyledText>
                                                    </Text>
                                                  </div>
                                                </ColoredTextProvider>
                                              </StyledComponent>
                                            </Link__StyledTextProvider>
                                          </div>
                                        </StyledComponent>
                                      </styled.div>
                                    </Box>
                                  </StyledComponent>
                                </Link__BoxActive>
                              </div>
                            </StyledComponent>
                          </styled.div>
                        </Box>
                      </StyledComponent>
                    </Link__BoxContainer>
                  </div>
                </StyledComponent>
              </styled.div>
            </Box>
          </StyledComponent>
        </Link__BoxWrapper>
      </a>
    </StyledComponent>
  </Link__StyledAnchor>
</Link>
`;

exports[`SideNavigation.Link renders with active styles 1`] = `
.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c6 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c8 {
  color: #2a2c2e;
  color: inherit;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c8 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c3 {
  margin-left: 0;
  border-left: 4px solid #4b286d;
  color: #4b286d;
  background-color: #f2eff4;
}

.c3:hover {
  background-color: #f2eff4;
}

.c1 {
  background-color: #f2eff4;
}

.c5 {
  border-left: none;
  margin-left: 0px;
}

.c7 {
  font-weight: bold;
  color: #4b286d;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  active={true}
  href="#"
  reactRouterLinkComponent={null}
  subMenuLink={false}
  to={null}
>
  <Link__StyledAnchor
    href="#"
    to={null}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Link__StyledAnchor-gur8v7-4",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "text-decoration: none;",
            ],
          },
          "displayName": "Link__StyledAnchor",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Link__StyledAnchor-gur8v7-4",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      to={null}
    >
      <a
        className="c0"
        href="#"
        to={null}
      >
        <Link__BoxWrapper
          active={1}
        >
          <StyledComponent
            active={1}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Link__BoxWrapper-gur8v7-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    [Function],
                  ],
                },
                "displayName": "Link__BoxWrapper",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "below": [Function],
                  "between": [Function],
                  "children": [Function],
                  "className": [Function],
                  "horizontal": [Function],
                  "inline": [Function],
                  "inset": [Function],
                  "tag": [Function],
                  "vertical": [Function],
                },
                "render": [Function],
                "styledComponentId": "Link__BoxWrapper-gur8v7-1",
                "target": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "below": undefined,
                    "between": undefined,
                    "className": undefined,
                    "horizontal": undefined,
                    "inline": false,
                    "inset": undefined,
                    "tag": "div",
                    "vertical": undefined,
                  },
                  "displayName": "Box",
                  "propTypes": Object {
                    "below": [Function],
                    "between": [Function],
                    "children": [Function],
                    "className": [Function],
                    "horizontal": [Function],
                    "inline": [Function],
                    "inset": [Function],
                    "tag": [Function],
                    "vertical": [Function],
                  },
                  "render": [Function],
                },
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <Box
              active={1}
              className="c1"
              inline={false}
              tag="div"
            >
              <styled.div
                active={1}
                className="c1"
                inline={false}
                tag="div"
              >
                <StyledComponent
                  active={1}
                  className="c1"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [
                        [Function],
                      ],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bdVaJa",
                        "isStatic": false,
                        "lastClassName": "c6",
                        "rules": Array [
                          [Function],
                          [Function],
                          [Function],
                          [Function],
                          [Function],
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bdVaJa",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  inline={false}
                  tag="div"
                >
                  <div
                    className="c2 c1 Link__BoxWrapper-gur8v7-1 c1"
                  >
                    <Link__BoxContainer
                      active={1}
                      submenulink={0}
                      vertical={3}
                    >
                      <StyledComponent
                        active={1}
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Link__BoxContainer-gur8v7-0",
                              "isStatic": false,
                              "lastClassName": "c3",
                              "rules": Array [
                                [Function],
                              ],
                            },
                            "displayName": "Link__BoxContainer",
                            "foldedComponentIds": Array [],
                            "propTypes": Object {
                              "below": [Function],
                              "between": [Function],
                              "children": [Function],
                              "className": [Function],
                              "horizontal": [Function],
                              "inline": [Function],
                              "inset": [Function],
                              "tag": [Function],
                              "vertical": [Function],
                            },
                            "render": [Function],
                            "styledComponentId": "Link__BoxContainer-gur8v7-0",
                            "target": Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "defaultProps": Object {
                                "below": undefined,
                                "between": undefined,
                                "className": undefined,
                                "horizontal": undefined,
                                "inline": false,
                                "inset": undefined,
                                "tag": "div",
                                "vertical": undefined,
                              },
                              "displayName": "Box",
                              "propTypes": Object {
                                "below": [Function],
                                "between": [Function],
                                "children": [Function],
                                "className": [Function],
                                "horizontal": [Function],
                                "inline": [Function],
                                "inset": [Function],
                                "tag": [Function],
                                "vertical": [Function],
                              },
                              "render": [Function],
                            },
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                        submenulink={0}
                        vertical={3}
                      >
                        <Box
                          active={1}
                          className="c3"
                          inline={false}
                          submenulink={0}
                          tag="div"
                          vertical={3}
                        >
                          <styled.div
                            active={1}
                            className="c3"
                            inline={false}
                            submenulink={0}
                            tag="div"
                            vertical={3}
                          >
                            <StyledComponent
                              active={1}
                              className="c3"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [
                                    [Function],
                                  ],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-bdVaJa",
                                    "isStatic": false,
                                    "lastClassName": "c6",
                                    "rules": Array [
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-bdVaJa",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              inline={false}
                              submenulink={0}
                              tag="div"
                              vertical={3}
                            >
                              <div
                                className="c4 c3 Link__BoxContainer-gur8v7-0 c3"
                              >
                                <Link__BoxActive
                                  active={1}
                                  horizontal={3}
                                  submenulink={0}
                                >
                                  <StyledComponent
                                    active={1}
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "Link__BoxActive-gur8v7-2",
                                          "isStatic": false,
                                          "lastClassName": "c5",
                                          "rules": Array [
                                            [Function],
                                          ],
                                        },
                                        "displayName": "Link__BoxActive",
                                        "foldedComponentIds": Array [],
                                        "propTypes": Object {
                                          "below": [Function],
                                          "between": [Function],
                                          "children": [Function],
                                          "className": [Function],
                                          "horizontal": [Function],
                                          "inline": [Function],
                                          "inset": [Function],
                                          "tag": [Function],
                                          "vertical": [Function],
                                        },
                                        "render": [Function],
                                        "styledComponentId": "Link__BoxActive-gur8v7-2",
                                        "target": Object {
                                          "$$typeof": Symbol(react.forward_ref),
                                          "defaultProps": Object {
                                            "below": undefined,
                                            "between": undefined,
                                            "className": undefined,
                                            "horizontal": undefined,
                                            "inline": false,
                                            "inset": undefined,
                                            "tag": "div",
                                            "vertical": undefined,
                                          },
                                          "displayName": "Box",
                                          "propTypes": Object {
                                            "below": [Function],
                                            "between": [Function],
                                            "children": [Function],
                                            "className": [Function],
                                            "horizontal": [Function],
                                            "inline": [Function],
                                            "inset": [Function],
                                            "tag": [Function],
                                            "vertical": [Function],
                                          },
                                          "render": [Function],
                                        },
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                    horizontal={3}
                                    submenulink={0}
                                  >
                                    <Box
                                      active={1}
                                      className="c5"
                                      horizontal={3}
                                      inline={false}
                                      submenulink={0}
                                      tag="div"
                                    >
                                      <styled.div
                                        active={1}
                                        className="c5"
                                        horizontal={3}
                                        inline={false}
                                        submenulink={0}
                                        tag="div"
                                      >
                                        <StyledComponent
                                          active={1}
                                          className="c5"
                                          forwardedComponent={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "attrs": Array [
                                                [Function],
                                              ],
                                              "componentStyle": ComponentStyle {
                                                "componentId": "sc-bdVaJa",
                                                "isStatic": false,
                                                "lastClassName": "c6",
                                                "rules": Array [
                                                  [Function],
                                                  [Function],
                                                  [Function],
                                                  [Function],
                                                  [Function],
                                                ],
                                              },
                                              "displayName": "styled.div",
                                              "foldedComponentIds": Array [],
                                              "render": [Function],
                                              "styledComponentId": "sc-bdVaJa",
                                              "target": "div",
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                            }
                                          }
                                          forwardedRef={null}
                                          horizontal={3}
                                          inline={false}
                                          submenulink={0}
                                          tag="div"
                                        >
                                          <div
                                            className="c6 c5 Link__BoxActive-gur8v7-2 c5"
                                          >
                                            <Link__StyledTextProvider
                                              active={true}
                                            >
                                              <StyledComponent
                                                active={true}
                                                forwardedComponent={
                                                  Object {
                                                    "$$typeof": Symbol(react.forward_ref),
                                                    "attrs": Array [],
                                                    "componentStyle": ComponentStyle {
                                                      "componentId": "Link__StyledTextProvider-gur8v7-3",
                                                      "isStatic": false,
                                                      "lastClassName": "c7",
                                                      "rules": Array [
                                                        [Function],
                                                      ],
                                                    },
                                                    "displayName": "Link__StyledTextProvider",
                                                    "foldedComponentIds": Array [],
                                                    "render": [Function],
                                                    "styledComponentId": "Link__StyledTextProvider-gur8v7-3",
                                                    "target": [Function],
                                                    "toString": [Function],
                                                    "warnTooManyClasses": [Function],
                                                    "withComponent": [Function],
                                                  }
                                                }
                                                forwardedRef={null}
                                              >
                                                <ColoredTextProvider
                                                  active={true}
                                                  className="c7"
                                                >
                                                  <div
                                                    className="c7"
                                                  >
                                                    <Text
                                                      block={false}
                                                      bold={true}
                                                      invert={false}
                                                      size="medium"
                                                    >
                                                      <Text__StyledText
                                                        block={false}
                                                        bold={true}
                                                        inheritColor={true}
                                                        invert={false}
                                                        size="medium"
                                                      >
                                                        <StyledComponent
                                                          block={false}
                                                          bold={true}
                                                          forwardedComponent={
                                                            Object {
                                                              "$$typeof": Symbol(react.forward_ref),
                                                              "attrs": Array [],
                                                              "componentStyle": ComponentStyle {
                                                                "componentId": "Text__StyledText-sc-1m0rr67-0",
                                                                "isStatic": false,
                                                                "lastClassName": "c8",
                                                                "rules": Array [
                                                                  [Function],
                                                                  [Function],
                                                                  [Function],
                                                                  [Function],
                                                                  [Function],
                                                                  "sup {",
                                                                  "top: -0.5em;",
                                                                  "font-size: 0.875rem;",
                                                                  "position: relative;",
                                                                  "vertical-align: baseline;",
                                                                  "padding-left: 0.1em;",
                                                                  "}",
                                                                ],
                                                              },
                                                              "displayName": "Text__StyledText",
                                                              "foldedComponentIds": Array [],
                                                              "render": [Function],
                                                              "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                                                              "target": "span",
                                                              "toString": [Function],
                                                              "warnTooManyClasses": [Function],
                                                              "withComponent": [Function],
                                                            }
                                                          }
                                                          forwardedRef={null}
                                                          inheritColor={true}
                                                          invert={false}
                                                          size="medium"
                                                        >
                                                          <span
                                                            className="c8"
                                                            size="medium"
                                                          >
                                                            Home
                                                          </span>
                                                        </StyledComponent>
                                                      </Text__StyledText>
                                                    </Text>
                                                  </div>
                                                </ColoredTextProvider>
                                              </StyledComponent>
                                            </Link__StyledTextProvider>
                                          </div>
                                        </StyledComponent>
                                      </styled.div>
                                    </Box>
                                  </StyledComponent>
                                </Link__BoxActive>
                              </div>
                            </StyledComponent>
                          </styled.div>
                        </Box>
                      </StyledComponent>
                    </Link__BoxContainer>
                  </div>
                </StyledComponent>
              </styled.div>
            </Box>
          </StyledComponent>
        </Link__BoxWrapper>
      </a>
    </StyledComponent>
  </Link__StyledAnchor>
</Link>
`;
